# mcp-rust-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  README.md  RELEASE_NOTES.md  debug_test.sh  install.sh  mcp-config.json  test_all_commands.sh  test_mcp.sh  test_mcp_complete.sh  test_pretty.py  test_request.json  test_simple.sh
examples/: demo.rs  usage.md
src/: analyzer.rs  daemon_state.rs  http_client.rs  http_server.rs  lib.rs  lsp_client.rs  main.rs  metrics.rs  refactor.rs  server.rs
src/commands/: analysis.rs  completion.rs  metrics.rs  mod.rs  refactor.rs
tests/: README.md  analysis_tests.rs  completion_tests.rs  integration_tests.rs  jsonrpc_internals_test.rs  jsonrpc_test.rs  lsp_client_tests.rs  mcp_direct_tests.rs  mcp_edge_case_tests.rs  mcp_integration_tests.rs  mcp_lsp_integration_test.rs  mcp_response_format_tests.rs  mcp_validation_tests.rs  productivity_validation.rs  real_lsp_integration_test.rs  server_tests.rs  simple_lsp_test.rs  tdd_analyzer_tests.rs
tests/test_project/: Cargo.toml
tests/test_project/src/: lib.rs
