[package]
name = "mcp-rust-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
jsonrpc-lite = "0.6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

# Temporarily comment out rust-analyzer dependencies for testing
# rust-analyzer = "0.0.2024"
# ra_ap_ide = "0.0.246"
# ra_ap_project_model = "0.0.246"
# ra_ap_vfs = "0.0.246"
# ra_ap_ide_db = "0.0.246"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mcp-rust-analyzer"
path = "src/main.rs"